--- a/www/monstars_c2/templates/monstars_c2/players.html
+++ b/www/monstars_c2/templates/monstars_c2/players.html
@@ -11,23 +11,37 @@
     <h1>Monstars' Starting Lineup:</h1>
     <p><img src="{% static 'monstars/images/monstars.png' %}" title="welcome to the jam" /></p>
 
-    <table style="width: 50%; border: none; margin-left: auto; margin-right: auto;">
-        <tr style="background: none; border: none;">
-            <td style="background: none; border: none; color: red">
+    <table style="width: 33%; margin-left: auto; margin-right: auto;">
+        <tr style="background: none;">
+            <td style="background: none; padding: 10px;">
                 <form action="{% url 'hire' %}" method="post">
                     {% csrf_token %}
+                    <legend><h2>Hire Player</h2></legend>
                     {% if error_msg %}
                     <p style="color: red"><b>{{ error_msg }}</b></p>
                     {% endif %}
-                    <label for="hostname"><b>Hire Player:</b></label>
                     <input type="text" id="hostname" name="hostname" size="40" />
-                    <input type="submit" value="Come on and Slam!" />
-                    </br /></br />
+                    <input type="submit" value="Welcome to the Jam!" />
+                </form>
+            </td>
+        </tr>
+        <tr style="background: none;">
+            <td style="background: none; padding: 10px;">
+                <form action="{%url 'rollcall' %}" method="post">
+                    {% csrf_token %}
+                    <legend><h2>Roll Call</h2></legend>
+                    <label for="slamport">Slam (UDP):</label>
+                    <input type="text" id="slamport" name="slamport" size="3" value="53" />
+                    <label for="jamport">Jam (TCP):</label>
+                    <input type="text" id="jamport" name="jamport" size="3" value="8080" />
+                    <br /><br />
+                    <input type="text" id="mask" name="mask" size="10" value="255.254.0.0" />
+                    <input type="submit" value="Slam!" />
                 </form>
             </td>
         </tr>
     </table>
-
+    </br />
     {% if lineup %}
         <table>
             <tr>
@@ -60,5 +74,9 @@
     {% else %}
         <h2>We need to steal more talent!</h2>
     {% endif %}
+
+    <table style="width: 50%; border: none; margin-left: auto; margin-right: auto;">
+    </table>
+
   </body>
 </html>
