--- a/www/monstars_c2/templates/monstars_c2/stats.html
+++ b/www/monstars_c2/templates/monstars_c2/stats.html
@@ -35,10 +35,10 @@
                     <label for="detail">Detail:</label>
                     <input type="text" id="detail" name="detail" size="80" />
                     <br /><br />
-                    <label for="dest_port">Slam (UDP):</label>
-                    <input type="text" id="slamport" name="slamport" size="5" value="53" />
-                    <label for="dest_port">Jam (TCP):</label>
-                    <input type="text" id="jamport" name="jamport" size="5" value="8080" />
+                    <label for="slamport">Slam (UDP):</label>
+                    <input type="text" id="slamport" name="slamport" size="3" value="53" />
+                    <label for="jamport">Jam (TCP):</label>
+                    <input type="text" id="jamport" name="jamport" size="3" value="8080" />
                     <br /><br />
                     <input type="submit" value="SLAM!" />
                     <br /><br />
