remove rollcall support, add SHELL command

--- a/www/monstars_c2/templates/monstars_c2/stats.html
+++ b/www/monstars_c2/templates/monstars_c2/stats.html
@@ -30,6 +30,7 @@
                         <option value="PING" selcted>PING</option>
                         <option value="GET">GET</option>
                         <option value="EXEC">EXEC</option>
+                        <option value="SHELL">SHELL</option>
                     </select>
                     <br /><br />
                     <label for="detail">Detail:</label>
