tweak swackhammer app

--- a/swackhammer/app/swackhammer/templates/swackhammer/signin.html
+++ b/swackhammer/app/swackhammer/templates/swackhammer/signin.html
@@ -17,9 +17,9 @@
                     {% if fail_msg %}
                         <p style="color: red;">{{ fail_msg }}</p>
                     {% endif %}
-                    <input type="text" id="username" name="username" size="25" value="username" />
+                    <input type="text" id="username" name="username" size="25" placeholder="username" required />
                     <br />
-                    <input type="password" id="password" name="password" size="25" value="password" />
+                    <input type="password" id="password" name="password" size="25" placeholder="password" required />
                     <br /><br />
                     <input type="submit" value="Welcome to the Jam!" />
                 </form>
