bang: template tweaks

--- a/swackhammer/app/swackhammer/templates/swackhammer/index.html
+++ b/swackhammer/app/swackhammer/templates/swackhammer/index.html
@@ -13,7 +13,7 @@
                 <!-- <a href="/"><img height="60" src="{% static 'swackhammer/images/pn-lineup.gif' %}" /></a> -->
             </td>
             <td style="background: transparent; border: none; text-align: right; vertical-align: top;">
-                <a href="./../../signout">Sign Out</a>
+                <a href="{% url 'signout' %}">Sign Out</a>
             </td>
         </tr>
     </table>
