move installer binaries out of static webfiles

--- a/blanko/app/blanko/templates/blanko/config.html
+++ b/blanko/app/blanko/templates/blanko/config.html
@@ -36,7 +36,7 @@
                                 <label for="kernel">Kernel Version</label>
                             </td>
                             <td style="border: none; text-align: left;">
-                                <select id="kernels" name="kernels">
+                                <select id="kernel" name="kernel">
                                     {% for ver in kernel_vers %}
                                     <option value="{{ ver }}">{{ ver }}</option>
                                     {% endfor %}
