blanko code cleanup, adjust swackhammer URLs for easier app installs, update READMEs

--- a/blanko/app/blanko/templates/blanko/include/navigation.html
+++ b/blanko/app/blanko/templates/blanko/include/navigation.html
@@ -22,7 +22,7 @@
             </a>
         </td>
         <td style="border: none; background: transparent; padding: 10px;">
-            <a href="{% url 'blankoindex' %}">
+            <a href="{% url 'blanko' %}">
                 <img title="blanko" src="{% static 'blanko/images/voidstar.gif' %}" title="welcome to the jam" />
             </a>
         </td>
