--- a/bang/app/bang/templates/bang/include/navigation.html
+++ b/bang/app/bang/templates/bang/include/navigation.html
@@ -22,7 +22,7 @@
             </a>
         </td>
         <td style="border: none; background: transparent;">
-            <a href="{% url 'bangindex' %}">
+            <a href="{% url 'bang' %}">
                 <img title="bang" src="{% static 'bang/images/nullstar.gif' %}" title="welcome to the jam" />
             </a>
         </td>
