add fake frame borders

--- a/bang/app/bang/templates/bang/index.html
+++ b/bang/app/bang/templates/bang/index.html
@@ -12,7 +12,7 @@
 
     <!-- table of credentials -->
     <h1>Recent Plays</h1>
-    <table style="border: none;">
+    <table>
         <tr>
             <td colspan="6" style="background: transparent; border: none; text-align: right;">
                 <a href="{% url 'export' %}">[Export as JSON]</a>
