--- a/swackhammer/app/swackhammer/templates/swackhammer/index.html
+++ b/swackhammer/app/swackhammer/templates/swackhammer/index.html
@@ -18,7 +18,7 @@
         </tr>
     </table>
 
-    <p><img src="{% static 'swackhammer/images/b-badguy.gif' %}" title="welcome to the jam" /></p>
+    <p><img src="{% static 'swackhammer/images/b-badguy.gif' %}" title="we want it all, we're unstoppable, we run the floor" /></p>
 
     <table style="border: none; background: transparent;">
         {% for name, config in monstar_apps.items %}
