--- a/bang/app/bang/templates/bang/tokens.html
+++ b/bang/app/bang/templates/bang/tokens.html
@@ -12,7 +12,7 @@
 
     <!-- table of auth tokens -->
     <h1>API Tokens</h1>
-        <table style="border: none; margin-left: auto; margin-right: auto;">
+        <table style="margin-left: auto; margin-right: auto;">
             <tr>
                 <th>Token</th>
                 <th>Last Used</th>
