add jam tunes, enable uwsgi logging to disk

--- a/swackhammer/app/swackhammer/templates/swackhammer/index.html
+++ b/swackhammer/app/swackhammer/templates/swackhammer/index.html
@@ -19,6 +19,7 @@
     </table>
 
     <p><img src="{% static 'swackhammer/images/b-badguy.gif' %}" title="we want it all, we're unstoppable, we run the floor" /></p>
+    <p><audio controls autoplay><source src="{% static 'swackhammer/audio/monstars.mp3' %}" type="audio/mpeg"/></audio></p>
 
     <table style="border: none; background: transparent;">
         {% for name, config in monstar_apps.items %}
