blanko: slight UI tweaks

--- a/blanko/app/blanko/templates/blanko/index.html
+++ b/blanko/app/blanko/templates/blanko/index.html
@@ -4,7 +4,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>MONSTARS: Starting Lineup</title>
+    <title>Blanko: Lineup</title>
   </head>
   <body>
     {% include './include/navigation.html' %}
