bupkus: implement installer and configuration logic

--- a/bupkus/app/bupkus/templates/bupkus/config.html
+++ b/bupkus/app/bupkus/templates/bupkus/config.html
@@ -25,10 +25,10 @@
                     <table style="border: none; background: none;">
                         <tr>
                             <td style="border: none; text-align: right;">
-                                <label for="module_name">Module Name</label>
+                                <label for="listener_name">Listener Exe Name</label>
                             </td>
                             <td style="border: none; text-align: left;">
-                                <input type="text" id="module_name" name="module_name" size="34" value="{{ module_name }}" placeholder="bang" required />
+                                <input type="text" id="listener_name" name="listener_name" size="34" value="{{ listener_name }}" placeholder="bupkus" required />
                             </td>
                         </tr>
                         <tr>
