bupkus: fix url collisions; swackhammer: increase wsgi worker count

--- a/bupkus/app/bupkus/templates/bupkus/config.html
+++ b/bupkus/app/bupkus/templates/bupkus/config.html
@@ -14,7 +14,7 @@
     <table>
         <tr>
             <td>
-                <form action="{% url 'config' %}" method="post">
+                <form action="{% url 'bupkus-config' %}" method="post">
                     {% csrf_token %}
                     <legend><h2>Configure BUPKUS</h2></legend>
 
