--- a/bupkus/app/bupkus/templates/bupkus/include/navigation.html
+++ b/bupkus/app/bupkus/templates/bupkus/include/navigation.html
@@ -16,7 +16,7 @@
 <table style="border: none; background: transparent;">
     <tr>
         <td style="border: none; background: transparent;">
-            <a href="{% url 'tokens' %}">
+            <a href="{% url 'bupkus-tokens' %}">
                 <img src="{% static 'swackhammer/images/credits.gif' %}" />
                 <br /> API Tokens
             </a>
@@ -27,7 +27,7 @@
             </a>
         </td>
         <td style="border: none; background: transparent;">
-            <a href="{% url 'config' %}">
+            <a href="{% url 'bupkus-config' %}">
                 <img src="{% static 'swackhammer/images/credits.gif' %}" />
                 <br /> Configure
             </a>
